Fixed overlapping issue when role name is too long (#122)

--- a/Extensions/Manage/Dnn.PersonaBar.Users/Users.Web/src/_exportables/src/components/UserTable/UsersRoles/style.less
+++ b/Extensions/Manage/Dnn.PersonaBar.Users/Users.Web/src/_exportables/src/components/UserTable/UsersRoles/style.less
@@ -82,7 +82,7 @@
                     border-left: 1px solid @alto;
                     .rw-combobox {
                         float: left;
-                        width: 350px;
+                        width: 250px;
                         height: 34px;
                         line-height: 34px;
                         vertical-align: middle;
@@ -140,8 +140,8 @@
                                         color: @rollingStone;
                                         border: none;
                                         outline: none;
-                                        overflow: hidden;
                                         white-space: nowrap;
+                                        overflow-x: hidden;
                                         text-overflow: ellipsis;
                                     }
                                     li:hover {
